@@ -7,3 +7,5 @@ To run the chat example, do each of the following in a different terminal:
     # ruby chat.rb bob
 
     # ruby chat.rb harvey
+
+Note that the "backports" gem should be installed.
