@@ -13,7 +13,7 @@ class ExistTest
 
   bloom do
     msgs <~ (notes * timer).lefts{|n| [ip_port, n]}
-    memories <= msgs.payloads
+    memories <= msgs.payloads{|p| p.val}
     dups <= memories.map{|n| [n.inspect] if msgs.exists?{|m| n.val == m.val[1]}}
   end
 end
