@@ -4,10 +4,13 @@
 * Implement support for aggregate functions that take multiple input columns
 * Add built-in aggregate function accum_pair(x, y), which produces a Set of
   pairs (two-element arrays [x,y]).
-* More consistent behavior for BudCollection#sort when used outside Bloom
-  programs
 * Support passing a code block to BudChannel#payloads. Previously a code block
   was allowed syntactically but wasn't evaluated
+* Change behavior of BudChannel#payloads for channels with two
+  columns. Previously we returned a single *column* (scalar) value in this case;
+  now we always return a tuple with k-1 columns
+* More consistent behavior for BudCollection#sort when used outside Bloom
+  programs
 * Restore support for each_with_index() over Bud collections
 * Restore functionality of Zookeeper-backed Bud collections and fix
   incompatibility with recent (> 0.4.4) versions of the Zookeeper gem
